agents/docs/versions/V3.10.0/constitution/CHANGELOG.md
# 宪法规范变更日志

## V3.9.2 (2026-03-15)

### 新增
- 新增 L1-L2 识别（业务领域 + 业务场景）到需求澄清智能体
- 新增技术选型确认（后端框架、数据库、认证方式）到需求澄清智能体
- 新增技术选型继承到需求理解智能体
- 新增 L2→L3、L3→L4 映射表强制产出要求

### 修订
- 修订 requirement-clarification AGENTS.md（版本 V3.9.0 → V3.9.2）
- 修订 requirement-understanding AGENTS.md（版本 V3.9.0 → V3.9.2）
- 修订需求澄清流程：增加 L1-L2 识别和技术选型确认步骤
- 修订需求理解流程：增加技术选型继承和 L3/L4 映射产出

### 流程更新
- 更新需求澄清流程：增加业务领域识别环节
- 更新需求理解流程：增加技术选型继承环节

### 备份
- 宪法规范备份：`agents/docs/versions/V3.9.2/constitution/`
- 智能体配置备份：`agents/docs/versions/V3.9.2/agents/`

### 变更依据
- 宪法规范迭代提案：V3.9.0 → V3.9.2
- 确认时间：2026-03-15 ________ GMT+8

### 问题解决
- 解决需求澄清时业务领域不清晰的问题（L1-L2 识别）
- 解决技术选型遗漏导致返工的问题（技术选型确认）
- 解决 L3/L4 映射产出不稳定的问题（强化产出要求）

---

## V3.7.3 (2026-03-12)

### 新增
- 新增验收前置完整性检查（需求验收智能体阶段 0）
- 新增技能命名规范（SKILLS_NAMING_CONVENTION.md）
- 新增技能注册表（skills_manifest.json）
- 新增 Git 推送强制要求（需求交付智能体）
- 新增支撑智能体三周期体系文档化

### 修订
- 修订第二章 §4 需求验收智能体（增加前置完整性检查）
- 修订第二章 §5 需求交付智能体（增加 Git 推送强制要求）
- 修订第六章 4.5 节（新增技能命名规范）

### 新增技能
- `skills_manifest.json`（技能注册表，16 个活跃技能）

### 流程更新
- 更新验收流程：增加交付物完整性预检环节
- 更新交付流程：Git 推送成为强制步骤
- 更新技能管理：建立技能 ID 注册表机制

### 备份
- 宪法规范备份：`agents/docs/versions/V3.7.3/constitution/`
- 智能体配置备份：`agents/docs/versions/V3.7.3/agents/`
- 技能目录备份：`agents/docs/versions/V3.7.3/skills/`（全量 44 个技能）

### 变更依据
- 宪法规范迭代提案（V3.7.2→V3.7.3）：`agents/docs/versions/V3.7.2/constitution/upgrade-to-V3.7.3/proposal.md`
- 确认时间：2026-03-12 00:31 GMT+8

### 问题解决
- 解决 req-B 验收时代码缺失仍进入验收的问题（前置检查）
- 解决 Skill-06 ID 重复问题（技能注册表）
- 解决 Git 提交后推送遗漏的问题（Git 推送强制）

---

## V3.7.2 (2026-03-11)

### 新增
- 新增审计智能体周期性审计职责（每 2 小时）
- 新增审计智能体规范缺陷报告职责
- 新增总结反思智能体宪法规范迭代提案职责
- 新增宪法规范迭代流程（第四章 4.5）

### 修订
- 修订第二章 §7 审计智能体（增加周期性审计职责）
- 修订第二章 §8 总结反思智能体（增加规范迭代职责）
- 修订第五章可配置参数（新增 N_reflection_hours）

### 新增技能
- `audit-log-analyzer`（审计日志分析器）
- `constitution-iterator`（宪法规范迭代提案生成器）

### 流程更新
- 更新审计流程：增加周期性审计环节
- 更新总结反思流程：增加规范迭代提案环节
- 新增规范更新流程：宪法规范迭代流程

### 变更依据
- 宪法规范迭代提案 001（已确认）
- 确认时间：2026-03-11 00:15 GMT+8

---

## V3.7.1 (2026-03-10)

### 新增
- 新增需求级并行架构（architecture/CONSTITUTION_V3.7_PARALLEL.md）
- 新增支撑智能体定时配置（HEARTBEAT.md）
- 新增 cron 定时任务配置

### 修订
- 修订支撑智能体配置（增加飞书推送）

---

## V3.7.0 (2026-03-09)

### 新增
- 初始版本
- 8 个核心智能体配置
- 3 个支撑智能体配置
- 审计规范（AUDIT_SPEC.md）
- 进展规范（PROGRESS_SPEC.md）
